@@ -29,6 +29,7 @@ VERSION 2.8-Beta 1
      elements in order not to fool users.
 
   BUGFIXES:
+   * Prevent inability to save Last.fm password in corner cases. (BR 315306)
    * Fix crash when quitting Amarok with Statistics Synchronization open. (BR 315525)
    * Fix items moving around when expanded in collection browser (BR 305602)
    * Fix typo in Nepomuk query which did not let track numbers show up in Amarok. (BR 311847)
